--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 <h1>The Wareflame page has been closed and there is a high probability that we won't be open for new user registrations in 2025, sorry.</h1>
+<h1>Thank you to the following sponsors!</h1>
+<h1>Зигфрид Тавов  11.30 USD</h1>
+<h1>bLACKsmith  6.31 USD</h1>
