--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<h1>The Wareflame page has been closed and there is a high probability that we won't be open for new user registrations in 2025, sorry.</h1>
-<h1>Thank you to the following sponsors!</h1>
+<h1>The Wareflame page has been closed and there is a high probability that we won't be open for new user registrations in 2025(there's a feature that upsets the Chinese government), sorry.</h1>
+<h1>Thank you to the following sponsors! Since January 2024</h1>
+<h1>明人不放暗屁  52.29 USD</h1>
+<h1>情票  41.83 USD</h1>
 <h1>Зигфрид Тавов  11.30 USD</h1>
 <h1>bLACKsmith  6.31 USD</h1>
+<h1>我可是个大屌丝  5 USD</h1>
+<h1>Ślovaca  1 USD</h1>
+<h1>苏倾年  1 USD</h1>
+<h1> </h1>
+<h1>Active users since 2025</h1>
+<h1>我可是个大屌丝  37 hours</h1>
+<h1>FLAME-EXsun</h1>
