--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         function handleOption(option) {
             switch (option) {
                 case 1:
-                    alert('Please confirm in your email.');
+                    alert('last used ”辐射☢️机器人⚙️----在线破解共产党服务器“');
                     break;
                 case 2:
                     alert('Downloading has been closed.');
