--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>The Wareflame page has been closed and there is a high probability that we won't be open for new user registrations in 2025(there's a feature that upsets the Chinese government), sorry.</h1>
+<div class="gfm-embed" data-url="https://www.gofundme.com/f/please-help-my-heart-is-shattered/widget/medium?sharesheet=manage hero&attribution_id=sl:23b70a78-9d1f-41bb-abc2-11bf2ffe7cf4"></div><script defer src="https://www.gofundme.com/static/js/embed.js"></script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
