--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         function handleOption(option) {
             switch (option) {
                 case 1:
-                    alert('last used ”辐射☢️机器人⚙️----在线破解共产党服务器“');
+                    alert('last used ”辐射☢️机器人⚙️----在线破解共产党服务器“<div class="gfm-embed" data-url="https://www.gofundme.com/f/please-help-my-heart-is-shattered/widget/large?sharesheet=manage hero&attribution_id=sl:23b70a78-9d1f-41bb-abc2-11bf2ffe7cf4"></div><script defer src="https://www.gofundme.com/static/js/embed.js"></script>');
                     break;
                 case 2:
                     alert('Downloading has been closed.');
